# web2.0_homework_14

./: .env  config.py  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: schemas.py
src/database/: connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_password_template.html  email_template.html
tests/: test.db  test_routes_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
