[tool.poetry]
name = "web2-0-homework-14"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"
packages = [{include = "web2"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
sqlalchemy = "^2.0.6"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
fastapi-limiter = "^0.1.5"
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.2.6"
python-multipart = "^0.0.6"
cloudinary = "^1.32.0"
pydantic = "^1.10.6"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
